--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,12 @@
+/*
+ * POISsON - Probe in Solution Space
+ *
+ *
+ * Copyright (c) 2015 Advanced Institute for Computational Science, RIKEN.
+ * All rights reserved.
+ *
+ */
+
 body
 {
   background : #808080;
